--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "firebase": "^12.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
+    "sweetalert2": "^11.22.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
