--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "sweetalert2": "^11.22.5",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
