--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.1.12",
     "daisyui": "^5.0.54",
     "firebase": "^12.2.1",
+    "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
+    "react-simple-typewriter": "^5.0.1",
     "sweetalert2": "^11.22.5",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.12"
