--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.12",
     "daisyui": "^5.0.54",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.12",
     "motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
