--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.29.1",
     "sweetalert2": "^11.22.5",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.12"
