--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "daisyui": "^5.0.54",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
