--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^5.0.54",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
