--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
